@@ -1,3 +1,13 @@
+2010-02-23  Ariya Hidayat  <ariya.hidayat@gmail.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Faster cut-off for rectangle drawing without shadow.
+        https://bugs.webkit.org/show_bug.cgi?id=35267
+
+        * platform/graphics/qt/GraphicsContextQt.cpp:
+        (WebCore::GraphicsContext::drawRect):
+
 2010-02-23  Steve Block  <steveblock@google.com>
 
         Reviewed by Jeremy Orlow.
